--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build:tw": "tailwindcss build tailwind.css -o src/index.css",
     "prestart": "npm run build:tw",
     "start": "react-scripts start",
-    "prebuild": "npm run build:tw",
+    "prebuild": "env NODE_ENV=production npm run build:tw",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
